additions to mullo prototype

--- a/mullo code/mullo.html
+++ b/mullo code/mullo.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="mullo.css"/>
+   <link rel="stylesheet" href="all.min.css"/>
     <title>mullo welcome page</title>
 </head>
 <body>
     <header class="header-container">
         <section>
             <div class="logo"></div>
-            <h1 class="agency">mullo marketing agency</h1>
         </section>
 
         <nav class="nav-list">
@@ -26,10 +26,85 @@
     </header>
 
     <main>
-        <section class="agency-container">
-            android
+        <section>
+            <div class="agency">
+                <h1 class="mullo">mullo marketing agency</h1>
+            </div>
         </section>
-
+        <section>
+            <div class="chart-container">
+                <header>
+                    <div>
+                        <h2>Music Charts</h2>
+                        <p>We are dedicated to keeping you posted with all your trending vibes accross the globe</p>
+                    </div>
+                </header>
+                <main>
+                    <div class="global-charts">
+                        <div class="chart-card">
+                            <h3 class="chart-heading">Ugandan Hit List</h3>
+                            <table class="chart-table">
+                                <tr class="table-header">
+                                    <th>RANKING</th>
+                                    <th>SONG</th>
+                                    <th>ARTIST</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td class="song">ONINA</td>
+                                    <td>BAZA</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td class="song">THANK GOD</td>
+                                    <td class="artist">VINKA</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td class="song">KIGWA LEERO</td>
+                                    <td class="artist">BOBI WINE</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td class="song">MATALA</td>
+                                    <td class="artist">NWAGI</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td class="song">LOCO</td>
+                                    <td class="artist">REMA</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td class="song">GULU</td>
+                                    <td class="artist">FFEFFE BUSSI</td>
+                                </tr>
+                                <tr>
+                                    <td>7</td>
+                                    <td class="song">GYENVUDDE</td>
+                                    <td class="artist">BEBE COOL</td>
+                                </tr>
+                                <tr>
+                                    <td>8</td>
+                                    <td class="song">MAMA MIA</td>
+                                    <td class="artist">CHAMELEON</td>
+                                </tr>
+                                <tr>
+                                    <td>9</td>
+                                    <td class="song">MAGNETIC</td>
+                                    <td class="artist">GOODLYF</td>
+                                </tr>
+                                <tr>
+                                    <td>10</td>
+                                    <td class="song">KATONDA</td>
+                                    <td class="artist">WILSON BUGEMBE</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </section>
         <section class="talent-container">
             <div class="talent-header">
                 <h2 class="talent-heading">fresh talent</h2>
@@ -117,6 +192,7 @@
             </div>
         </div>
     </footer>
+    <script src="all.min.js"></script>
     <script src="mullo.js"></script>
 </body>
 </html>
